<resources>
    <string name="app_name" translatable="false">Habitube</string>
    <string name="app_version">App Version</string>
    <string name="app_desc">Habitube - is an open-source project. Ad-Free.  The main point is to save your watched movies and tv shows with your own special rating. You can also add movies and tv shows to your planning list and explore trendings.</string>
    <string name="user_id_text" translatable="false">User ID</string>
    <string name="post_id_text">Post ID</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>

    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="trending_tv_shows">Trending TV Shows</string>

    <string name="similar_movies">Similar Movies</string>
    <string name="similar_tv_shows">Similar TV Shows</string>

    <string name="contact_us_menu">Contact Me</string>
    <string name="about_menu">About</string>
    <string name="search_movies_menu">Search…</string>
    <string name="error_text_title">Sorry!</string>
    <string name="error_text_body">Something went wrong :(</string>
    <string name="description_card">Description</string>
    <string name="biography_card">Biography</string>

    <string name="navbar_library">Library</string>
    <string name="navbar_explore">Explore</string>
    <string name="navbar_settings">Settings</string>
    <string name="navbar_search">Search</string>
    <string name="seasons">Seasons</string>

    <string name="watched_tab">Watched</string>
    <string name="planning_tab">Planning</string>
    <string name="search_in_imdb">Search in IMDb</string>
    <string name="add_to_watched">Add as Watched</string>
    <string name="watch_later">Watch Later</string>
    <string name="already_added">Already added</string>
    <string name="are_you_sure">Are you sure to delete this movie from your library?</string>
    <string name="are_you_sure_files">Do you want to delete all movies and shows from local library?</string>
    <string name="are_you_sure_directory">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="delete_files">Delete Local Library</string>
    <string name="version_name_text">App Version:</string>
    <string name="credits">Credits</string>

    <string name="m_01">January</string>
    <string name="m_02">February</string>
    <string name="m_03">March</string>
    <string name="m_04">April</string>
    <string name="m_05">May</string>
    <string name="m_06">June</string>
    <string name="m_07">July</string>
    <string name="m_08">August</string>
    <string name="m_09">September</string>
    <string name="m_10">October</string>
    <string name="m_11">November</string>
    <string name="m_12">December</string>

    <string name="minutes">minutes</string>
    <string name="your_list_is_empty">Your list is empty!</string>
    <string name="hint">You can tap on Search Icon to find your favorite Movie/TV Show/Star \n or \n Just click the explore button</string>
    <string name="language">en-US</string>
    <string name="episodes">episodes</string>
    <string name="planned">Arranged ✓</string>
    <string name="videos">Videos</string>
    <string name="air_today">Air Today</string>
    <string name="nothing_found">Nothing Found…</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_text">Turn on the Dark Theme</string>
    <string name="sorting">Sort by</string>
    <string name="radio_recent">Recently Added</string>
    <string name="radio_name">Title</string>
    <string name="radio_year">Release Year ↓</string>
    <string name="radio_first">Added First</string>
    <string name="radio_year_2">Release Year ↑</string>
    <string name="radio_rating">Rating</string>

    <string name="close">Close</string>

    <string name="tab_info">Info</string>
    <string name="tab_credits">Cast &amp; Crew</string>
    <string name="tab_similar">More Like This</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="show_all_cast">Show All Cast</string>
    <string name="show_all_crew">Show All Crew</string>
    <string name="turn_on_adult_content">Turn on Adult Content</string>
    <string name="tab_similar_alt">Similar</string>
    <string name="tab_credits_alt">Credits</string>
    <string name="details">Details</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="backup_amp_sync">Backup &amp; Sync</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="google_warning">Google Account will be only used to store id of your media in order to further synchronization among your devices.\n All your information is private for us.</string>
    <string name="show_all_tv_shows">Show all TV Shows</string>
    <string name="show_all_movies">Show All Movies</string>
    <string name="search_hint">What are you looking for? \n Just type it! \nSearch for a movie, tv show, person.</string>
    <string name="multi">Multi</string>
    <string name="people">People</string>
    <string name="storage">Storage</string>
    <string name="delete_all_watched_shows">Delete all Watched Shows</string>
    <string name="delete_all_planning_shows">Delete all Planning Shows</string>
    <string name="delete_all_watched_movies">Delete all Watched Movies</string>
    <string name="delete_all_planning_movies">Delete all Planning Movies</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="enjoy_netflix">Enjoy Popular TV Shows on Netflix!</string>
    <string name="enjoy_amazon">Enjoy exclusive Amazon Originals TV Shows!</string>
    <string name="enjoy_disney">Find Your Favorite Movie on Disney Plus!</string>
    <string name="enjoy_apple">Unique New TV Shows only on Apple TV +!</string>
    <string name="discover_movies">Discover Movies</string>
    <string name="vote_average">Vote Average</string>
    <string name="release_date">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="netflix_popular_now">The Most Popular Now</string>
    <string name="netflix_best_rating">The Best Rating</string>
    <string name="netflix_new_shows">New Shows</string>
    <string name="remove_from_watched">Remove from Watched</string>
    <string name="remove_from_planning">Remove from Planning</string>
    <string name="first_air_date">First Air Date</string>
    <string name="discover_tv_shows">Discover TV SHOWS</string>
    <string name="rating_hint">You can change it whenever you want by long tap to the star</string>
    <string name="rate_app">Rate App</string>
    <string name="new_update">New Update</string>
    <string name="new_update_extended">Hey! New update is on Google Play :)</string>
    <string name="open">Open</string>
    <string name="copied">IMDb link copied</string>
    <string name="open_in_netflix">Open in Netflix</string>
    <string name="discover">Discover</string>

    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="action_adventure">Action &amp; Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="scifi">Sci-Fi</string>
    <string name="scifi_fantasy">Sci-Fi &amp; Fantasy</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="war_politics">War &amp; Politics</string>
    <string name="western">Western</string>
    <string name="kids">Kids</string>
    <string name="news">News</string>
    <string name="reality">Reality</string>
    <string name="soap">Soap</string>
    <string name="talk">Talk</string>
</resources>
