<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_movies"
        android:title="@string/search_movies_menu"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings_menu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/contact_us_menu"
        android:title="@string/contact_us_menu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about_us_menu"
        android:title="@string/about_menu"
        app:showAsAction="never"/>
</menu>