<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainListFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="14dp"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white"/>

    <LinearLayout
        android:id="@+id/trending_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trending_movies"
            android:textSize="26sp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trendind_tv_shows"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="16dp"
        android:layout_below="@+id/trending_movies">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trending_tv_shows"
            android:textSize="26sp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_tv_shows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"/>
    </LinearLayout>

</RelativeLayout>