<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="10dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/circle_button"
        android:backgroundTint="@color/dark_600" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bold"
            android:text="@string/release_date"
            android:textColor="@color/dark_800"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/regular"
            android:gravity="end"
            android:textColor="@color/dark_800"
            android:textSize="16sp"
            android:textStyle="normal"
            tools:text="YEAR" />
    </LinearLayout>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/slider_year"
        style="@style/RangeBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stepSize="1"
        android:valueFrom="1900"
        android:valueTo="2020" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bold"
            android:text="@string/vote_average"
            android:textColor="@color/dark_800"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/text_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/regular"
            android:gravity="end"
            android:textColor="@color/dark_800"
            android:textSize="16sp"
            android:textStyle="normal"
            tools:text="YEAR" />
    </LinearLayout>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/slider_vote"
        style="@style/RangeBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stepSize="1"
        android:valueFrom="4"
        android:valueTo="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/discover"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/bold"
        android:text="@string/discover"
        android:textColor="@color/white_is_white"
        app:cornerRadius="10dp" />


</LinearLayout>